fix non proper hero image scalling on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@
 
     /* Other Variables */
     --border-radius: 0.5rem;
+    --box-shadow-navbar: 0 0 0.1rem var(--primary-color);
     --box-shadow-primary: 0 0 0.3rem var(--primary-color);
     --box-shadow-secondary: 0 0 0.3rem var(--secondary-color-dark);
     /* Reddish-purple glow */
@@ -49,7 +50,7 @@
     /* Very dark gray */
     --gradient-end: var(--primary-color-dark);
     /* Dark reddish-purple gray */
-    --linear-gradient: linear-gradient(90deg, var(--gradient-start) 70%, #2a1144 90%, var(--gradient-start));
+    --linear-gradient: linear-gradient(90deg, var(--gradient-start) 70%, #1f0c33 90%, var(--gradient-start));
     --linear-gradient-text-primary: linear-gradient(90deg, transparent 20%, #33194d80 50%, transparent 80%);
     --linear-gradient-text-secondary: linear-gradient(90deg, transparent 20%, hsla(322, 53%, 31%, 0.418) 50%, transparent 80%);
     --viewport-width-desktop: 1400px;
@@ -148,7 +149,7 @@ footer .container-full {
     margin-inline: auto;
     z-index: 1001;
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow-secondary);
+    box-shadow: var(--box-shadow-navbar);
     overflow: hidden;
 }
 
@@ -322,7 +323,6 @@ footer .container-full {
     background-color: var(--background-color);
     background-position: center top;
     background-attachment: fixed;
-    /* background-size: contain; */
     background-repeat: no-repeat;
     background-clip: padding-box;
     position: relative;
@@ -847,6 +847,8 @@ footer .container-full {
 
 /* Media Queries for Mobile */
 @media (max-width: 768px) {
+
+
     .container-full {
         max-width: var(--viewport-width-mobile);
     }
@@ -878,7 +880,7 @@ footer .container-full {
         /* background: var(--background-color); */
         background-image: var(--linear-gradient);
         color: var(--text-color);
-        box-shadow: var(--box-shadow-secondary);
+        box-shadow: var(--box-shadow-navbar);
     }
 
     .nav-links.open {
@@ -893,6 +895,10 @@ footer .container-full {
         background-image: var(--linear-gradient);
         color: var(--text-color);
         border-radius: var(--border-radius);
+    }
+
+    #home {
+        background-size: contain;
     }
 
 
